idf_component_register(SRCS "MAIN.CPP"
                            "WIFIMANAGER.CPP"
                            "MQTTCLIENT.CPP"
                            "LIGHTCONTROLLER.CPP"
                            "RTCMANAGER.CPP"
                            "IRMANAGER.CPP"
                    INCLUDE_DIRS ".")
